force-app/main/default/objects/Pokedex_Entry__c/Pokedex_Entry__c.object-meta.xml
<CustomObject>
    <label>Pokedex Entry</label>
    <nameField>
        <label>Pokedex Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pokedex Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>