force-app/main/default/objects/Pokedex_Entry__c/fields/Biome__c.field-meta.xml
<CustomField>
    <fullName>Biome__c</fullName>
    <label>Biome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Canyons</fullName>
            </value>
            <value>
                <fullName>Ocean</fullName>
            </value>
            <value>
                <fullName>Grasslands</fullName>
            </value>
            <value>
                <fullName>Forest</fullName>
            </value>
            <value>
                <fullName>Mountains</fullName>
            </value>
            <value>
                <fullName>Beach</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>