force-app/main/default/objects/Pokedex_Entry__c/fields/Pokedex_Index__c.field-meta.xml
<CustomField>
    <fullName>Pokedex_Index__c</fullName>
    <label>Pokedex Index</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>