force-app/main/default/objects/Pokedex_Entry__c/fields/Secondary_Type__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Type__c</fullName>
    <label>Secondary Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type</valueSetName>
    </valueSet>
</CustomField>