force-app/main/default/objects/Pokedex_Entry__c/fields/Sp_Attack__c.field-meta.xml
<CustomField>
    <fullName>Sp_Attack__c</fullName>
    <label>Sp. Attack</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>