force-app/main/default/objects/Pokedex_Entry__c/fields/Sprite__c.field-meta.xml
<CustomField>
    <fullName>Sprite__c</fullName>
    <formula>IMAGE(Sprite_Front_URL__c, &quot;sprite&quot;, 80, 80)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprite</label>
    <type>Text</type>
</CustomField>