force-app/main/default/objects/Pokedex_Entry__c/fields/Sprite_Back_URL__c.field-meta.xml
<CustomField>
    <fullName>Sprite_Back_URL__c</fullName>
    <label>Sprite Back URL</label>
    <type>Url</type>
</CustomField>