force-app/main/default/objects/Pokedex_Entry__c/fields/Sprite_Front_URL__c.field-meta.xml
<CustomField>
    <fullName>Sprite_Front_URL__c</fullName>
    <label>Sprite Front URL</label>
    <type>Url</type>
</CustomField>