force-app/main/default/objects/Pokedex_Entry__c/fields/Sprite_Resource_Location__c.field-meta.xml
<CustomField>
    <fullName>Sprite_Resource_Location__c</fullName>
    <formula>&quot;firered-leafgreen/&quot; &amp; TEXT(Pokedex_Index__c) &amp; &quot;.png&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sprite Resource Location</label>
    <type>Text</type>
</CustomField>