force-app/main/default/objects/Pokedex_Entry__c/fields/Trigger_API_Enrichment__c.field-meta.xml
<CustomField>
    <fullName>Trigger_API_Enrichment__c</fullName>
    <label>Trigger API Enrichment</label>
    <type>DateTime</type>
</CustomField>