force-app/main/default/objects/Pokedex_Entry__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Sprite__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Secondary_Type__c</columns>
    <columns>Biome__c</columns>
    <columns>HP__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>